--- a/angular-assignment/src/app/components/login/login.component.scss
+++ b/angular-assignment/src/app/components/login/login.component.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background: #f0f8ff; // light background
+  background: #f0f8ff; 
 }
 
 .login-card {
