--- a/angular-assignment/src/app/components/navbar/navbar.component.scss
+++ b/angular-assignment/src/app/components/navbar/navbar.component.scss
@@ -1,4 +1,3 @@
-/* app.component.css */
 .layout {
   display: flex;
    height: 94.9vh;       
@@ -8,18 +7,16 @@
   width: 220px;
   background: #2c3e50;
   color: white;
-  display: flex;            /* Flex container */
-  flex-direction: column;   /* Stack children vertically */
-  height: 94.9vh;             /* Full height */
+  display: flex;           
+  flex-direction: column;   
+  height: 94.9vh;            
   padding: 20px;
 }
 
-.sidebar-top {
-  /* Content stays at top */
-}
+
 
 .sidebar-bottom {
-  margin-top: auto;         /* Push logout to bottom */
+  margin-top: auto;        
 }
 
 nav {
