--- a/angular-assignment/src/app/components/products/products.component.html
+++ b/angular-assignment/src/app/components/products/products.component.html
@@ -9,8 +9,7 @@
   </select>
 
   <ag-grid-angular
-    style="width: 100%; height: 600px;"
-    class="ag-theme-alpine"
+    class="ag-theme-alpine product-grid"
     [rowData]="rowData"
     [columnDefs]="columnDefs"
     [pagination]="true"
