--- a/angular-assignment/src/app/components/login/login.component.scss
+++ b/angular-assignment/src/app/components/login/login.component.scss
@@ -11,7 +11,7 @@
   padding: 2rem 2.5rem;
   border-radius: 12px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-  width: 350px;
+  width: 1em;
   text-align: left;
 
   h1 {
