--- a/angular-assignment/src/app/components/users/users.component.html
+++ b/angular-assignment/src/app/components/users/users.component.html
@@ -1,10 +1,9 @@
 <h2>User Table</h2>
 
-<input type="text" placeholder="Search by name..." (input)="onSearch($event)" style="margin-bottom:10px; padding:6px; width: 250px;" />
+<input type="text" placeholder="Search by name..." (input)="onSearch($event)" class="user-in" />
 
 <ag-grid-angular
-  style="width: 100%; height: 600px;"
-  class="ag-theme-alpine"
+  class="ag-theme-alpine user-grid"
   [rowData]="rowData"
   [columnDefs]="columnDefs"
   [pagination]="true"
